--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -1,3 +1,4 @@
 @import "./variables";
 @import "./libs/normalize";
-@import "./components//container";
+@import "./components/container";
+@import "./components/main";
