--- a/client/src/components/TickersList/TickersList.module.scss
+++ b/client/src/components/TickersList/TickersList.module.scss
@@ -1,7 +1,5 @@
 .root { 
     font-size: 20px;
-
-    margin-top: 15px;
     margin-left: 50px;
 }
 
@@ -11,4 +9,29 @@
     grid-template-rows: 1fr;
     grid-column-gap: 15px;
     grid-row-gap: 0px;
+}
+
+.item { 
+    margin-bottom: 15px;
+
+    &:last-child { 
+        margin-bottom: 0;
+    }
+
+    &__red { 
+        color: red;
+    }
+
+    &__green { 
+        color: green;
+    }
+}
+
+.wraper { 
+    display: flex;
+    align-items: center;
+}
+
+.container { 
+    margin-left: 15px;
 }
