--- a/client/src/components/Search/Serach.module.scss
+++ b/client/src/components/Search/Serach.module.scss
@@ -10,4 +10,30 @@
         border: 1px solid rgba(0, 0, 0, 0.2);
         width: 400px;
     }
+
+    & { 
+        @media (max-width: 750px) {
+            width: 200px;
+
+            &:focus {
+                width: 300px;
+            }
+        }
+
+        @media (max-width: 610px) {
+            width: 150px;
+
+            &:focus {
+                width: 200px;
+            }
+        }
+
+        @media (max-width: 450px) {
+            width: 100px;
+
+            &:focus {
+                width: 150px;
+            }
+        }
+    }
 }
