--- a/client/src/scss/components/_container.scss
+++ b/client/src/scss/components/_container.scss
@@ -6,5 +6,11 @@
     grid-template-rows: 50px 1fr 50px;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+
+    & {
+        @media (max-width: 450px) {
+                    padding: 5px;
+        }
+    }
 }
 
