--- a/client/src/scss/components/_main.scss
+++ b/client/src/scss/components/_main.scss
@@ -2,4 +2,10 @@
     margin-top: 25px;
     margin-bottom: 25px;
     margin-left: 25px;
+
+    & {
+        @media (max-width: 450px) {
+            margin-left: 0px
+        }
+    }
 }
