--- a/client/src/components/TickersListHeader/TickersListHeader.module.scss
+++ b/client/src/components/TickersListHeader/TickersListHeader.module.scss
@@ -1,6 +1,10 @@
 .root { 
     font-size: 20px;
     color: grey;
+
+    @media (max-width: 750px) {
+        font-size: 15px;
+    }
 }
 
 .list { 
