--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -2,3 +2,6 @@
 @import "./libs/normalize";
 @import "./components/container";
 @import "./components/main";
+@import "./components/not_found";
+@import "./components/centered";
+@import "./components/loader";
