--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -3,13 +3,23 @@
     justify-content: space-between;
     align-items: center;
 
-    font-size: 20px;
+    @media (max-width: 600px) {
+        font-size: 15px;
+    }
+
+    @media (min-width: 750px) {
+        font-size: 20px;
+    }
 }
 
 .list { 
-    width: 200px;
+    width: 130px;
     display: flex;
     justify-content: space-between;
+
+    @media (min-width: 750px) {
+        width: 200px;
+    }
 }
 
 .item {
@@ -19,5 +29,45 @@
 
     &__active { 
         color: #fe5f1e;
+    }
+}
+
+.root {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 12px 20px;
+    width: 300px;
+    border-radius: 10px;
+    font-size: 16px;
+    transition: all 0.15s ease-in-out;
+
+    &:focus {
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        width: 400px;
+    }
+
+    & {
+        @media (max-width: 750px) {
+            width: 200px;
+
+            &:focus {
+                width: 300px;
+            }
+        }
+
+        @media (max-width: 610px) {
+            width: 150px;
+
+            &:focus {
+                width: 200px;
+            }
+        }
+
+        @media (max-width: 450px) {
+            width: 100px;
+
+            &:focus {
+                width: 150px;
+            }
+        }
     }
 }
