--- a/client/src/components/InterestingBlock/InterestingBlock.module.scss
+++ b/client/src/components/InterestingBlock/InterestingBlock.module.scss
@@ -1,13 +1,9 @@
 .root { 
     font-size: 20px;
-}
 
-.center { 
-        display: flex;
-        justify-content: center;
-    
-        padding-top: 50px;
-        padding-bottom: 50px;
+    @media (max-width: 750px) {
+        font-size: 15px;
+    }
 }
 
 .list {
@@ -31,31 +27,5 @@
 
     &__green {
         color: green;
-    }
-}
-
-.container {
-    margin-left: 15px;
-}
-
-.wraper {
-    display: flex;
-    align-items: center;
-}
-
-.button {
-    background-color: inherit;
-    padding: 5px 10px;
-    font-size: 15px;
-
-    border: 1px solid #fe5f1e;
-    border-radius: 15px;
-
-    cursor: pointer;
-
-    &:hover {
-        background-color: #fe5f1e;
-
-        color: white;
     }
 }
