--- a/client/src/components/TickersList/TickersList.module.scss
+++ b/client/src/components/TickersList/TickersList.module.scss
@@ -1,82 +1,7 @@
 .root { 
     font-size: 20px;
-}
 
-.list { 
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 15px;
-    grid-row-gap: 0px;
-}
-
-.item { 
-    margin-bottom: 15px;
-
-    &:last-child { 
-        margin-bottom: 0;
-    }
-
-    &__red { 
-        color: red;
-    }
-
-    &__green { 
-        color: green;
-    }
-}
-
-.wraper { 
-    display: flex;
-    align-items: center;
-}
-
-.container { 
-    margin-left: 15px;
-}
-
-.loader {
-    border: 16px solid #f3f3f3;
-    /* Light grey */
-    border-top: 16px solid #3498db;
-    /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-.center { 
-    display: flex;
-    justify-content: center;
-
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
-.button {
-    background-color: inherit;
-    padding: 5px 10px;
-    font-size: 15px;
-
-    border: 1px solid #fe5f1e;
-    border-radius: 15px;
-
-    cursor: pointer;
-
-    &:hover {
-        background-color: #fe5f1e;
-
-        color: white;
+    @media (max-width: 750px) {
+        font-size: 15px;
     }
 }
